--- a/study-in-singapore.html
+++ b/study-in-singapore.html
@@ -361,7 +361,7 @@
                 <div class="col-lg-12">
                     <div class="mb-4">
                         <div class=" text-align: justify mt-5">
-                            <h4 class="mb-3">Singapore student pass application</h4>
+                            <h2 class="mb-3 text-center">Singapore student Visa Application</h2>
                             <img class="img-fluid float-right rounded w-20 mr-4 mb-3" style="width: 40%; height: 500px;"
                                 src="img/singapore/singapore-visa.jpg" alt="Image">
                             <p>After receiving the confirmation letter of admission from a desired institute, students
