--- a/study-in-ireland.html
+++ b/study-in-ireland.html
@@ -329,7 +329,7 @@
                     </div>
 
                     <!-- Recent Post -->
-                    <div class="mb-5">
+                    <!-- <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Recent Post</h3>
                         <a class="d-flex align-items-center text-decoration-none mb-3" href="">
                             <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
@@ -352,7 +352,7 @@
                                 <small>Jan 01, 2050</small>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Tag Cloud -->
                     <div class="mb-5">
