--- a/study-in-cyprus.html
+++ b/study-in-cyprus.html
@@ -135,9 +135,9 @@
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
                 <h3 class="display-4 text-white text-uppercase">Cyprus</h3>
                 <div class="d-inline-flex text-white">
-                    <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
+                    <p class="m-0 text-uppercase"><a class="text-white" href="index.html">Home</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                    <p class="m-0 text-uppercase"><a class="text-white" href="">Study</a></p>
+                    <p class="m-0 text-uppercase"><a class="text-white" href="study.html">Study</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
                     <p class="m-0 text-uppercase">Cyprus</p>
                 </div>
