--- a/index.html
+++ b/index.html
@@ -317,13 +317,13 @@
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <a class="h5" href="">Stock-Market</a>
-                            <div class="border-top mt-4 pt-4">
+                            <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i> <small>(250)</small>
                                     </h6>
                                     <h5 class="m-0"></h5>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -416,7 +416,7 @@
                                 <small class="m-0"><i class="far fa-clock text-primary mr-2"></i></small>
                             </div>
                             <h5>Stock-Market</h5>
-                            <!-- <a class="h5" href="">Stock-Market</a> -->
+                            <a class="h5" href="">Stock-Market</a> -->
                             <!-- <div class="border-top mt-4 pt-4">
                                 <div class="d-flex justify-content-between">
                                     <h6 class="m-0"><i class="fa fa-star text-primary mr-2"></i>4.5 <small>(250)</small>
@@ -425,7 +425,7 @@
                                 </div>
                             </div> -->
                         </div>
-                    </div> -->
+                    </div>
                 </div>
                 <div class="col-lg-4 col-md-6 mb-4">
                     <!-- <div class="rounded overflow-hidden mb-2">
@@ -466,10 +466,10 @@
 
                     </p>
                     <ul class="list-inline text-white m-0">
-                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Labore eos amet dolor amet diam
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Clear, concise description of the company’s mission.
                         </li>
-                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Etsea et sit dolor amet ipsum</li>
-                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Diam dolor diam elitripsum vero.
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Easy-to-navigate contact form.</li>
+                        <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Selection of appropriate categories for inquiries.
                         </li>
                     </ul>
                 </div>
