--- a/thailand.html
+++ b/thailand.html
@@ -94,7 +94,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            
+
                                             <a href="work-visa.html" class="dropdown-item">Work Visa</a>
                                             <a href="business-visa.html" class="dropdown-item">Business Visa</a>
                                             <a href="visit-visa.html" class="dropdown-item">Visit & Tourist Visa</a>
@@ -153,26 +153,64 @@
                 <div class="col-lg-8">
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
-                        <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
+                        <h1 class="mb-5">Thailand Tourism</h1>
                         <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
-                        <p>Thailand,officially the Kingdom of Thailand and historically known as Siam, is a country in Southeast Asia on the Indochinese Peninsula. With a population of almost 70 million,it spans 513,120 square kilometres (198,120 sq mi). Thailand is bordered to the northwest by Myanmar, to the northeast by Laos, to the southeast by Cambodia, to the south by the Gulf of Thailand and Malaysia, and to the southwest by the Andaman Sea; it also shares maritime borders with Vietnam to the southeast, and Indonesia and India to the southwest. Bangkok is the nation's capital and largest city.</p>
-                        <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
+                        <p>Thailand,officially the Kingdom of Thailand and historically known as Siam, is a country in
+                            Southeast Asia on the Indochinese Peninsula. With a population of almost 70 million,it spans
+                            513,120 square kilometres (198,120 sq mi). Thailand is bordered to the northwest by Myanmar,
+                            to the northeast by Laos, to the southeast by Cambodia, to the south by the Gulf of Thailand
+                            and Malaysia, and to the southwest by the Andaman Sea; it also shares maritime borders with
+                            Vietnam to the southeast, and Indonesia and India to the southwest. Bangkok is the nation's
+                            capital and largest city.</p>
+                        <h2 class="mb-4">About Thailand</h2>
                         <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
-                        <p>If you are interested in a career that combines finance with technology, then pursuing
-                            training in both the stock market and software development could be a great choice for you.
-                            This combination of skills can be valuable in positions that involve designing and
-                            implementing financial software, managing investment portfolios, or developing trading
-                            algorithms.
-                            To become proficient in both areas, you will need to have a strong foundation in computer
-                            science and programming languages, as well as a deep understanding of the stock market and
-                            financial concepts. You can start by taking courses obtaining certifications in both areas,
-                            or pursuing a degree that combines these subjects.
+                        <p>Bordered with Andaman sea and gulf of Thailand, Thailand is a dream destination for every
+                            beach lover. Thailand tourism has everything a tourist could ask for, from an international
+                            holiday destination including, Gren-blue clean beaches, coral islands, mountains, shopping
+                            markets, Hindu temples, monasteries and never ending nightlife. If you are a sea food lover,
+                            then Thailand tour packages is just for you.
                         </p>
-                        <p>As you progress in your career, you may find that having expertise in both the stock market
-                            and software development can open up new opportunities and allow you to make a greater
-                            impact in your field. With the right training and dedication, you can build a successful
-                            career that allows you to utilize your skills and knowledge to make a positive difference in
-                            the world.</p>
+                        <p>Thailand is divided majorly into 6 regions.</p>
+                        <ul>
+                            <li>North</li>
+                            <li>Northeast</li>
+                            <li>Central</li>
+                            <li>South</li>
+                            <li>East</li>
+                            <li>West</li>
+                        </ul>
+
+                        <h2 class="mb-4">North Thailand Tourism</h2>
+                        <p>Unlike beach popular destinations in Thailand, Northern Thailand is a landlocked and full of
+                            beautiful mountains. Popular for hill stations, climate is cooler than other parts of the
+                            country.</p>
+
+                        <h2 class="mb-4">The Golden Triangle</h2>
+                        <p>was the illegal opium growing region bordering northern Thailand, Laos and Myanmar. But don’t
+                            worry, it doesn’t grow opium anymore. This is the only region in Thailand where you will
+                            find areas full of vineyards, strawberries and tea & coffee plantation.</p>
+
+                        <h2 class="mb-4">Popular tourist destinations of northern Thailand:</h2>
+                        <ul>
+                            <li>Chiang Mai</li>
+                            <li>Chiang rai</li>
+                        </ul>
+
+                        <h2 class="mb-4">Popular Places to visit in north Thailand:</h2>
+                        <ul>
+                            <li>Doi Inthanon</li>
+                            <li>Golden Traiagle</li>
+                        </ul>
+
+                        <h2 class="mb-4">Northeast Thailand Tourism:</h2>
+                        <p>Also called Isan Thailand, Northeast region is not popular among tourist. It is poorer than
+                            any other region in Thailand. It is a hub for rice and other staple crop farming. Isan
+                            culture, language and food is more of Laos (Another Southeast Asian country ) rather than
+                            Thai. People here may not know and understand English because of very few tourist activity
+                            in this region. The region has a deep historic connection because it is close to old Khmer
+                            Kingdom. You will find lot of ruins of Hindu and Buddhist temples.</p>
+                        <p>The north-eastern region is ideal for someone who want authentic Thailand tourism experience.
+                        </p>
                     </div>
 
                     <!-- Comment List -->
@@ -243,33 +281,37 @@
 
                     <!-- Category List -->
                     <div class="mb-5">
-                        <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
+                        <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Packages</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">3 Nights in pattaya</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Bangkok</a>
+                                <a href="" class="text-decoration-none h6 m-0">1 night in Bangkok</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in France</a>
+                                <a href="" class="text-decoration-none h6 m-0">Alcazar show</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in Ireland</a>
+                                <a href="" class="text-decoration-none h6 m-0">Coral island</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
+                                <a href="" class="text-decoration-none h6 m-0">Tiger park</a>
+                                <span class="badge badge-primary badge-pill"></span>
+                            </li>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="" class="text-decoration-none h6 m-0">For information Contact Us...</a>
                                 <span class="badge badge-primary badge-pill"></span>
                             </li>
                         </ul>
                     </div>
 
                     <!-- Recent Post -->
-                    <div class="mb-5">
+                    <!-- <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Recent Post</h3>
                         <a class="d-flex align-items-center text-decoration-none mb-3" href="">
                             <img class="img-fluid rounded" src="img/blog-80x80.jpg" alt="">
@@ -292,7 +334,7 @@
                                 <small>Jan 01, 2050</small>
                             </div>
                         </a>
-                    </div>
+                    </div> -->
 
                     <!-- Tag Cloud -->
                     <div class="mb-5">
@@ -338,8 +380,8 @@
                 <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
-                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">clients</h5>
-                            <h1>Meet Our clients</h1>
+                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Destination</h5>
+                            <h1>Popular Destination</h1>
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-lg-3 text-center team mb-4">
@@ -356,7 +398,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>Singapore</h5>
+                                        <h5>BANGKOK</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
@@ -375,7 +417,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>Cyprus</h5>
+                                        <h5>PHUKET</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
@@ -394,7 +436,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>France</h5>
+                                        <h5>PATTAYA</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
@@ -413,7 +455,7 @@
                                         </div>
                                     </div>
                                     <div class="bg-secondary p-3">
-                                        <h5>Ireland</h5>
+                                        <h5>KRABI</h5>
                                         <p class="m-0"></p>
                                     </div>
                                 </div>
